<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_bluetooth"
        android:name="com.example.sensoft.ui.bluetooth.BluetoothFragment"
        android:label="@string/title_bluetooth"
        tools:layout="@layout/fragment_bluetooth" >
        <action
            android:id="@+id/action_navigation_bluetooth_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sensoft.ui.home.HomeFragment"
        android:label="@string/title_Sensoft"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.example.sensoft.ui.reminder.ReminderFragment"
        android:label="@string/title_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_external_sound"
        android:name="com.example.sensoft.ui.externalsound.ExternalSoundFragment"
        android:label="@string/title_external_sound"
        tools:layout="@layout/fragment_external_sound" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sensoft.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
